# Predictive-text-neural-network-3.0

./: .gitattributes  .gitignore  12-09-20 3:25pm.py  14-09-20 11:39am.py  14-09-20 1:10pm.py  README.md  draw.py  draw_coords_test.py  draw_pygame.py  draw_pygame_trie_rankings.py  main.py  no_comments.py  pyproject.toml  references.txt  requirements.txt  test.py  trie_rankings.py
data/: testShort.csv  words_test.txt
data/model_digits_e20_2/: saved_model.pb
data/model_digits_e20_2/variables/: variables.index
data/model_letters_e20_2/: saved_model.pb
data/model_letters_e20_2/variables/: variables.index
